--- a/blog.html
+++ b/blog.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Blog | Manasa's Blog</title>
+  <title>Manasa's Blog</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
+  <!-- Your CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
 <header>
   <h1>Manasa’s Blog</h1>
