--- a/about.html
+++ b/about.html
@@ -21,26 +21,12 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
-
-<main>
-  <h2>About Me 🌸</h2>
-
-  <p>
-    Hi, I’m Manasa. I’m an engineering student who loves learning,
-    self-growth, and expressing thoughts through writing.
-  </p>
-
-  <p>
-    This blog is my personal space where I share my experiences,
-    lessons from life, technology notes, and reflections.
-  </p>
-
-  <p>
-    I believe growth happens step by step—and this blog is one of
-    those steps 🤍
-  </p>
+<main class="hero">
+  <h2>About Me 🌷</h2>
+  <p>Hi, I’m Manasa. I’m an engineering student who loves learning, self-growth, and expressing thoughts through writing.</p>
+  <p>This blog is my personal space where I share my experiences, lessons from life, technology notes, and reflections.</p>
+  <p>I believe growth happens step by step—and this blog is one of those steps 🤍</p>
 </main>
-
 <footer>
   <p>© 2025 Manasa</p>
 </footer>
