--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
 </header>
 
-<main>
+<main class="hero">
   <h2>Welcome 🤍</h2>
   <p>This is my personal space to share thoughts, learning, and reflections.</p>
 </main>
