--- a/post1.html
+++ b/post1.html
@@ -22,7 +22,7 @@
   </nav>
 </header>
 
-<main>
+<main class="hero">
   <article class="blog-post">
     <h2>Why I Started This Blog</h2>
     <p><em>Posted on December 2025</em></p>
